codegen/tests/ui/main/duplicate-main-fn.rs
#[shuttle_codegen::main]
async fn main() -> ShuttleRocket {}
